--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -437,4 +437,43 @@
     <data name="DeliveryMode_Message" xml:space="preserve">
         <value>Message (Compatibility)</value>
     </data>
+    <data name="EnableTray" xml:space="preserve">
+        <value>Enable System Tray</value>
+    </data>
+    <data name="CloseToTray" xml:space="preserve">
+        <value>Close to Tray</value>
+    </data>
+    <data name="TrayExit" xml:space="preserve">
+        <value>Exit</value>
+    </data>
+    <data name="TrayShow" xml:space="preserve">
+        <value>Show</value>
+    </data>
+    <data name="CloseToTrayPromptTitle" xml:space="preserve">
+        <value>Closing Action</value>
+    </data>
+    <data name="CloseToTrayPromptMessage" xml:space="preserve">
+        <value>Do you want to minimize to tray or exit the application?</value>
+    </data>
+    <data name="RememberMyChoice" xml:space="preserve">
+        <value>Remember my choice</value>
+    </data>
+    <data name="MinimizeToTray" xml:space="preserve">
+        <value>Minimize to Tray</value>
+    </data>
+    <data name="ExitApp" xml:space="preserve">
+        <value>Exit Application</value>
+    </data>
+    <data name="Option_Ask" xml:space="preserve">
+        <value>Ask Every Time</value>
+    </data>
+    <data name="Option_Exit" xml:space="preserve">
+        <value>Exit Application</value>
+    </data>
+    <data name="Option_Minimize" xml:space="preserve">
+        <value>Minimize to Tray</value>
+    </data>
+    <data name="ClosingBehavior" xml:space="preserve">
+        <value>Exit Action</value>
+    </data>
 </root>
