feat: Implement smart floating subtitle overlay with ghost mode
- Added SubtitleOverlayWindow for displaying real-time speech subtitles.
- Implemented "Ghost Mode" using Win32 WS_EX_TRANSPARENT to allow full click-through when locked to support gaming scenarios.
- Added Smart Hover detection: The Unlock button is hidden by default and only appears/becomes clickable when hovering over the window area.
- Optimized window interactivity to dynamically switch between click-through and interactive modes based on cursor position.
- Added configuration for window opacity, orientation, and lock state.

--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -530,4 +530,7 @@
     <data name="Page_SpeechRecognition" xml:space="preserve">
         <value>Speech Recognition</value>
     </data>
+    <data name="Tab_Recognition" xml:space="preserve">
+        <value>Recognition</value>
+    </data>
 </root>
