feat: Enhance Screenshot Overlay with Toolbar and Multi-screen Support
- Toolbar & Actions: Added a floating toolbar to the screenshot overlay with Confirm, Cancel, and Reset/Reselect actions.
- Multi-screen Capture: Updated screen capture logic to support selecting areas across multiple monitors.
- Screenshot Modes: Introduced "Screenshot Mode" setting with "Precise" (with toolbar) and "Quick" (instant capture) options.
- UI & Interaction:
  - Implemented resizable selection box with handles and drag-to-move support.
  - Added visual cues and proper cursor feedback during selection.
- Configuration:
  - add screenshot settings

--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -617,4 +617,19 @@
     <data name="Screenshot_Hint" xml:space="preserve">
         <value>Select the area to translate. Right-click or ESC to cancel.</value>
     </data>
+    <data name="Confirm" xml:space="preserve">
+        <value>Confirm</value>
+    </data>
+    <data name="Reset" xml:space="preserve">
+        <value>Reset</value>
+    </data>
+    <data name="ScreenshotMode" xml:space="preserve">
+        <value>Screenshot Mode</value>
+    </data>
+    <data name="ScreenshotMode_Quick" xml:space="preserve">
+        <value>Quick (No Confirm)</value>
+    </data>
+    <data name="ScreenshotMode_Precise" xml:space="preserve">
+        <value>Precise (Toolbar)</value>
+    </data>
 </root>
