--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -632,4 +632,16 @@
     <data name="ScreenshotMode_Precise" xml:space="preserve">
         <value>Precise (Toolbar)</value>
     </data>
+    <data name="Copy" xml:space="preserve">
+        <value>Copy</value>
+    </data>
+    <data name="CopyOriginal" xml:space="preserve">
+        <value>Copy Original</value>
+    </data>
+    <data name="CopyTranslated" xml:space="preserve">
+        <value>Copy Translated</value>
+    </data>
+    <data name="CopyBilingual" xml:space="preserve">
+        <value>Copy Bilingual</value>
+    </data>
 </root>
