feat: add i18n support for Image Translate button in Overlay

--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -644,4 +644,7 @@
     <data name="CopyBilingual" xml:space="preserve">
         <value>Copy Bilingual</value>
     </data>
+    <data name="ImageTranslate" xml:space="preserve">
+        <value>Image Translate</value>
+    </data>
 </root>
