--- a/EasyChat/Lang/Resources.zh.resx
+++ b/EasyChat/Lang/Resources.zh.resx
@@ -666,4 +666,40 @@
     <data name="FixedAreaSettings" xml:space="preserve">
         <value>固定区域设置</value>
     </data>
+    <data name="SelectionTranslation" xml:space="preserve">
+        <value>划词翻译</value>
+    </data>
+    <data name="EnableSelectionTranslation" xml:space="preserve">
+        <value>启用划词翻译</value>
+    </data>
+    <data name="SelectionTranslate_Title" xml:space="preserve">
+        <value>划词翻译</value>
+    </data>
+    <data name="SelectionTranslate_SourceLabel" xml:space="preserve">
+        <value>原文</value>
+    </data>
+    <data name="SelectionTranslate_SourceWatermark" xml:space="preserve">
+        <value>选中的文字将显示在这里...</value>
+    </data>
+    <data name="SelectionTranslate_ResultLabel" xml:space="preserve">
+        <value>译文</value>
+    </data>
+    <data name="SelectionTranslate_AutoDetect" xml:space="preserve">
+        <value>自动检测</value>
+    </data>
+    <data name="SelectionTranslate_Language_Chinese" xml:space="preserve">
+        <value>中文</value>
+    </data>
+    <data name="SelectionTranslate_CopyTooltip" xml:space="preserve">
+        <value>复制译文</value>
+    </data>
+    <data name="SelectionTranslate_TranslateButton" xml:space="preserve">
+        <value>翻译</value>
+    </data>
+    <data name="SelectionTranslate_ImplementationPending" xml:space="preserve">
+        <value>[翻译功能待实现] 原文: </value>
+    </data>
+    <data name="SelectionTranslate_Failed" xml:space="preserve">
+        <value>翻译失败: </value>
+    </data>
 </root>
