feat: overhaul selection translation (smart positioning, focus management, perf)
[UX & Interaction]
- Smart Positioning: Implemented screen boundary check; window now flips (Left/Top) to stay on screen.
- Focus Control: Applied WS_EX_NOACTIVATE to prevent translation window from stealing focus.
- Improved Interaction: Added double-click support and refined text selection detection reliability.
[Features & Performance]
- Enhanced Copy: Copy button now captures full details (phonetics/definitions/examples) in Word Mode.
- Performance: Optimized token rendering with virtualization; moved heavy init (fonts) to background threads to fix UI freeze.
[UI Polish]
- Visual Refinements: Improved styling for non-word tokens (grayed out) and adjusted spacing.
- General UI cleanup: Fixed corner radius, scrollbars, and layout inconsistencies.

--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -713,4 +713,10 @@
     <data name="SelectionTranslate_Failed" xml:space="preserve">
         <value>Translation Failed: </value>
     </data>
+  <data name="Tips" xml:space="preserve">
+    <value>Tips</value>
+  </data>
+  <data name="Examples" xml:space="preserve">
+    <value>Examples</value>
+  </data>
 </root>
