--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -767,4 +767,10 @@
     <data name="Tts_SearchVoices" xml:space="preserve">
         <value>Search voices...</value>
     </data>
+    <data name="Loading" xml:space="preserve">
+        <value>Loading...</value>
+    </data>
+    <data name="Tts" xml:space="preserve">
+        <value>TTS</value>
+    </data>
 </root>
