--- a/EasyChat/Lang/Resources.zh.resx
+++ b/EasyChat/Lang/Resources.zh.resx
@@ -756,4 +756,10 @@
     <data name="Tts_SearchVoices" xml:space="preserve">
         <value>搜索语音...</value>
     </data>
+    <data name="Loading" xml:space="preserve">
+        <value>加载中...</value>
+    </data>
+    <data name="Tts" xml:space="preserve">
+        <value>语音合成 (TTS)</value>
+    </data>
 </root>
