feat: Selection Translation supports Machine Translation
- added machine translation support to selection translation feature
- refactor SelectionTranslationProviderManager to support switching between AI and Machine providers
- added MachineSelectionTranslationProvider implementation
- update Settings UI with engine selection, icons and helper tooltip
- refactor constants: renamed Ai to AiModel, added Machine constant
- added MachineProvider to SelectionTranslationConfig to verify specific config usage
- added icons for translation engines and providers in settings
- added localized resources for new UI elements

--- a/EasyChat/Lang/Resources.resx
+++ b/EasyChat/Lang/Resources.resx
@@ -773,4 +773,7 @@
     <data name="Tts" xml:space="preserve">
         <value>TTS</value>
     </data>
+    <data name="TranslationEngineInfo" xml:space="preserve">
+        <value>AI models provide higher quality translations with support for phonetics, examples, and hints, but may be slower. Machine translation is faster but offers lower quality and lacks these features.</value>
+    </data>
 </root>
