--- a/EasyChat/Lang/Resources.zh.resx
+++ b/EasyChat/Lang/Resources.zh.resx
@@ -762,4 +762,8 @@
     <data name="Tts" xml:space="preserve">
         <value>语音合成 (TTS)</value>
     </data>
+    <data name="TranslationEngineInfo" xml:space="preserve">
+        <value>大模型翻译速度略慢，但是翻译质量更好，并且支持音标、例句、提示等功能。
+机器翻译不支持音标、例句、提示等，并且翻译质量略差，优点是翻译速度很快。</value>
+    </data>
 </root>
